err/django-tapatalk.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_tapatalk-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tapatalk'...
Compiling './lib/python3.5/site-packages/tapatalk/post.py'...
***   File "./lib/python3.5/site-packages/tapatalk/post.py", line 6
    print topic
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tapatalk/tests'...
Compiling './lib/python3.5/site-packages/tapatalk/tests/transport.py'...
***   File "./lib/python3.5/site-packages/tapatalk/tests/transport.py", line 15
    print h
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tapatalk/tests.py'...
***   File "./lib/python3.5/site-packages/tapatalk/tests.py", line 11
    print server.login(USERNAME, PASSWORD)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tapatalk/topic.py'...
***   File "./lib/python3.5/site-packages/tapatalk/topic.py", line 60
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tapatalk/views.py'...
***   File "./lib/python3.5/site-packages/tapatalk/views.py", line 22
    print request.body
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
